fix-update-profile
